--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <p>Put them here</p>
     </div>
     <div>
-      <form action="/action_page.php">
+      <form id="userinfo">
         <label for="files">Select files:</label>
         <input type="file" id="files" name="files" multiple>
         <input type="submit">
       </form>
     </div>
-    <script src="static/app.js"></script>
+    <script src="handler.js"></script>
   </body>
 </html>
