added form handler, moved form handler to static asset

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <input type="submit">
       </form>
     </div>
-    <script src="handler.js"></script>
+    <script src="static/handler.js"></script>
   </body>
 </html>
